# oysterclip

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  index.html  styles.css
.github/workflows/: ci.yml  coverage.yml  release.yml
src/: app.rs  app_actions.rs  app_state.rs  auth.rs  cli.rs  common.rs  components.rs  config.rs  constants.rs  entry.rs  format.rs  help_modal.rs  history.rs  image_store.rs  ipc.rs  main.rs  paths.rs  rust_clipboard_watcher.rs  source.rs  text.rs  theme.rs  utils.rs  watcher_control.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: actions.rs  app.rs  error.rs  mod.rs  root.rs  state.rs
src/config/: config.rs  constants.rs  mod.rs  paths.rs
src/data/: format.rs  image_store.rs  link_preview.rs  mod.rs  text.rs
src/history/: crypto.rs  mod.rs  store.rs
src/ipc/: mod.rs  server.rs
src/ui/: components.rs  help_modal.rs  mod.rs  theme.rs
src/watcher/: mod.rs
