[package]
name = "clipboard-watcher"
version = "0.2.0"
edition = "2021"


[dependencies]
arboard = "3"
image = { version = "0.25", features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
keyring = "2"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
