[workspace]
members = ["packages/common", "packages/oysterclip-watcher", "packages/oysterclip-viewer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = "fat"

# Viewer: UI app - prioritize responsiveness over size
[profile.release.package.oysterclip-viewer]
opt-level = 2

# Watcher: Background daemon - prioritize size/efficiency
[profile.release.package.oysterclip-watcher]
opt-level = "z"

# Common: Library used by both - maximize performance
[profile.release.package.common]
opt-level = 3
